# gogadget

./: .gitignore  404.html  BUILDING.MD  README.md  index.html  issue_list.md  new_readme.md  pyproject.toml  sitemap.xml  tofix.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  for-anything-else--please-open-a--discussions-thread--https---github-com-jonathanfox5-gogadget-discussions--instead-.md  for-anything-else--please-open-a-discussions-thread-instead-.md  for-anything-else--please-open-a-discussions-thread-instead.md
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
developer/building/: index.html
developer/contributing/: index.html
docs/: README.md  mkdocs.yml
docs/developer/: building.md
docs/getting_started/: example_commands.md  supported_languages.md
docs/overrides/: main.html
docs/pages/: CNAME  index.md
docs/pages/css/: extra.css
docs/pages/developer/: building.md  contributing.md
docs/pages/getting_started/: example_commands.md  example_use_case.md  getting_resources.md  getting_started.md  installation.md  (+3 more)
docs/reference/: default_settings.md
examples/configs/: cuda_gogadget.toml  cuda_gogadget_en_es.toml  cuda_gogadget_it_en.toml  default_gogadget.toml  gogadget.toml  gogogadget.ini  mac_gogadget.toml  mac_gogadget_it_en.toml
examples/exclude_lists/: en_exclude.xlsx  it_exclude.xlsx
getting_started/example_commands/: index.html
getting_started/example_use_case/: index.html
getting_started/getting_resources/: index.html
getting_started/getting_started/: index.html
getting_started/installation/: index.html
getting_started/supported_languages/: index.html
getting_started/using_the_tool/: index.html
getting_started/video_tutorial/: index.html
gogadget/: cli_utils.py  command_runner.py  config.py  create_anki.py  frequency_analyser.py  help_text.py  main.py  transcriber.py  utils.py
img/affinity_designer_files/: logo.afdesign
install/: gogadget-0.2.2-py3-none-any.whl  gogadget_windows.iss  linux_install_instructions.txt  linux_test_install.sh  macos_install_instructions.txt  run_from_source_example.sh  windows_build.sh  windows_install_instructions.txt  windows_installer.ps1
license_info/acknowledgements/: index.html
license_info/full_license_info/: index.html
misc/getting_help/: index.html
misc/other_projects/: index.html
reference/command_reference/: index.html
reference/default_settings/: index.html
search/: search_index.json
src/gogadget/: help_text.py  main.py  transcriber.py  utils.py
(+5 files in other folders)
