[project]
name = "gogadget"
version = "0.2.12"
description = "gogadget is a toolkit for producing immersion and priming materials for language learning. It is capable of downloading audio and video files, automatically transcribing subtitles from videos and podcasts, and automatically producing filtered Anki decks with sentence audio / translations / screenshots / definitions."
authors = [
    {name = "Jonathan Fox"},
]
readme = "README.md"
requires-python = "<3.13,>=3.10"
dependencies = [
    "typer<1.0.0,>=0.13.1",
    "lemon-tizer<1.0.0,>=0.0.7",
    "yt-dlp",
    "genanki<1.0.0,>=0.13.1",
    "ffmpeg-python<1.0.0,>=0.2.0",
    "pandas",
    "openpyxl",
    "pysubs2<2.0.0,>=1.7.3",
    "numpy<2",
    "argos-spacy-compatibility<1.0.0,>=0.1.0",
    "whisperx-numpy2-compatibility<1.0.0,>=0.1.1",
    "rtoml<1.0.0,>=0.11.0",
    "tomlkit<1.0.0,>=0.13.2",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "spacy==3.7.5",
    "faster-whisper==1.0.3",
]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Text Processing :: Linguistic",
]
keywords = [
    "language learning",
    "yt-dlp",
    "whisper",
    "anki",
    "frequency analysis",
    "priming",
]

[project.urls]
homepage = "https://gogadget.jfox.io/"
repository = "https://github.com/jonathanfox5/gogadget"
documentation = "https://jonathanfox5.github.io/gogadget"
download = "https://github.com/jonathanfox5/gogadget/releases"

[project.scripts]
gogadget = "gogadget.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-glightbox>=0.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.46",
    "mdx-truly-sane-lists>=1.3",
    "mkdocs-minify-plugin>=0.8.0",
]

[tool.mypy]
disable_error_code = "import-untyped"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.workspace]
members = ["blah"]
